--- a/res/layout/newdemo.xml
+++ b/res/layout/newdemo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.nirhart.parallaxscroll.views.ParallaxScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -22,12 +22,12 @@
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="-30dp"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/newlogo" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="120dp"
-            android:background="@color/gplus_color_1"
+            android:background="#349760"
             android:orientation="horizontal" >
 
             <TextView
@@ -49,27 +49,50 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="120dp"
-            android:background="@android:color/white"
+            android:background="#E0E0E0"
             android:orientation="horizontal" >
 
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/homeworksx" />
+                android:layout_marginTop="10dp"
+                android:src="@drawable/hw" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
                 android:layout_marginTop="30dp"
-                android:text="Instant Homework !"
+                android:text="Homework and Assignments "
                 android:textSize="20sp" />
+        </LinearLayout>
+        
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:background="@color/gplus_color_4"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="20dp"
+                android:text="Fee Details"
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
+
+            <ImageView
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/feesnew" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="120dp"
-            android:background="@color/gplus_color_4"
+            android:background="@color/gplus_color_2"
             android:orientation="horizontal" >
 
             <ImageView
@@ -83,7 +106,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
                 android:layout_marginTop="20dp"
-                android:text="Your Timetable is a click away.."
+                android:text="Your Timetable is a click away"
                 android:textColor="@android:color/white"
                 android:textSize="20sp" />
         </LinearLayout>
@@ -91,7 +114,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="120dp"
-            android:background="@android:color/white"
+            android:background="@color/gplus_color_3"
             android:orientation="horizontal" >
 
             <TextView
@@ -99,38 +122,60 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
                 android:layout_marginTop="20dp"
-                android:text="Check your results on time!"
-                android:textColor="@android:color/black"
+                android:text="Check your results"
+                android:textColor="@android:color/white"
                 android:textSize="20sp" />
+
+            <ImageView
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/resultnew" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:background="#B57533"
+            android:orientation="horizontal" >
 
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
-                android:src="@drawable/resultsss" />
-        </LinearLayout>
-        
-             <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:background="@android:color/white"
-            android:orientation="horizontal" >
+                android:layout_marginLeft="10dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/noticehome" />
 
-            <Button
-                android:id="@+id/go"
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/selector_trans_button"
-                android:text="Click Me!!!"
-                android:textColor="@android:color/black"
+                android:text="Stay updated with notices"
+                android:textColor="@android:color/white"
                 android:textSize="20sp" />
+        </LinearLayout>
+        
+             <LinearLayout
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@android:color/white"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal" >
+
+            <Button
+                android:id="@+id/go"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/clickme"
+                 />
 
         </LinearLayout>
         
         
     </LinearLayout>
 
-</com.nirhart.parallaxscroll.views.ParallaxScrollView>
+</ScrollView>
