--- a/res/layout/row_homelistitem.xml
+++ b/res/layout/row_homelistitem.xml
@@ -28,8 +28,8 @@
 
         <TextView
             android:id="@+id/homeitemnametext"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/homprofilepic"
             android:text="Name"
@@ -115,8 +115,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/relativeLayout1"
         android:layout_marginTop="16dp"
-        android:ellipsize="end"
-       android:maxLines="6"
+       
         android:textIsSelectable="true"
         android:layout_marginLeft="5dp"
         android:text="Your text status here"
