--- a/res/layout/drawer_list_item.xml
+++ b/res/layout/drawer_list_item.xml
@@ -2,43 +2,40 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="150dp"
-        android:orientation="horizontal"
-   
-    >
+    android:orientation="horizontal" >
 
     <ImageView
         android:id="@+id/icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        
-        android:contentDescription="@string/desc_list_item_icon"
-        android:layout_centerVertical="true" />
-    
-  <TextView 
-      android:id="@+id/counter"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:contentDescription="@string/desc_list_item_icon" />
+
+    <TextView
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/notificationdrawable"
-        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="8dp"
-       android:textColor="@android:color/white"
-        />
+        android:layout_marginLeft="25dp"
+        android:layout_toRightOf="@+id/icon"
+        android:gravity="center_vertical"
+        android:paddingRight="40dp"
+        android:textColor="@android:color/black"
+        android:textSize="20sp" />
 
-  <TextView
-      android:id="@+id/title"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_alignTop="@+id/counter"
-      android:layout_toRightOf="@+id/icon"
-      android:gravity="center_vertical"
-      android:layout_marginTop="8dp"
-      android:textSize="20sp"
-      android:paddingRight="40dp"
-     android:textColor="@android:color/black"
-      />
- 
+    <TextView
+        android:id="@+id/counter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/title"
+        android:layout_marginRight="22dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/notificationdrawable"
+        android:textColor="@android:color/white" />
+
 </RelativeLayout>
