--- a/res/layout/status.xml
+++ b/res/layout/status.xml
@@ -2,27 +2,28 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-   
     android:background="@android:color/white"
     android:orientation="vertical" >
 
-    <ImageView 
+    <ImageView
         android:id="@+id/statusimageview"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        
-        />
+        android:layout_margin="10dp" />
 
     <EditText
         android:id="@+id/stausedit"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/postupdatebutton"
         android:layout_below="@+id/statusimageview"
         android:layout_toRightOf="@+id/statusimageview"
         android:background="@android:color/white"
         android:ems="10"
         android:gravity="top"
-        android:hint="Write to Express!" >
+        android:hint="Write to Express!"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp" >
 
         <requestFocus />
     </EditText>
@@ -34,11 +35,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
         android:text="Name"
-        android:textSize="30sp"
-         />
-    
-    <LinearLayout 
+        android:textSize="30sp" />
+
+    <!--
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -47,10 +49,9 @@
         android:orientation="horizontal"
         android:paddingBottom="5dp"
         android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        >
-        
+        android:paddingRight="5dp" >
     </LinearLayout>
+    -->
 
     <Button
         android:id="@+id/postupdatebutton"
@@ -58,7 +59,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-       
         android:text="Update" />
 
 </RelativeLayout>
