--- a/res/layout/attendancepopup.xml
+++ b/res/layout/attendancepopup.xml
@@ -4,17 +4,16 @@ android:id="@+id/popup_element"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:background="@android:color/white"
-android:orientation="vertical"
-android:padding="10sp" >
+
+ >
 
     <ListView
         android:id="@+id/attendancelist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+
         android:divider="@null"
         android:dividerHeight="5dp"
         android:scrollbars="none" >
