--- a/res/layout/drawer_list_item.xml
+++ b/res/layout/drawer_list_item.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="150dp"
+    android:background="@color/ScommixBaseColor"
     android:orientation="horizontal" >
 
     <ImageView
@@ -37,5 +38,13 @@
         android:layout_marginTop="5dp"
         android:background="@drawable/notificationdrawable"
         android:textColor="@android:color/white" />
+
+    <!--
+        <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/ScommixBaseColor" />
+    -->
 
 </RelativeLayout>
