--- a/res/layout/row_stuwisefee.xml
+++ b/res/layout/row_stuwisefee.xml
@@ -8,58 +8,79 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/homeitemnametext"
+        android:id="@+id/homeitemnametextstuwise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="Name"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/homestatustime"
+        android:id="@+id/totalconcession"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/homeitemnametext"
+        android:layout_below="@+id/homestatustimestuwise"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="14dp"
-        android:text="timing"
+        android:layout_marginTop="10dp"
+        android:text="Total Concession"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@android:color/black" />
 
     <TextView
-        android:id="@+id/homestatustext"
+        android:id="@+id/DateStuwise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/homestatustime"
+        android:layout_below="@+id/homeitemnametextstuwise"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
-        android:text="Your frequency"
+        android:layout_marginTop="10dp"
+        android:text="Date"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@android:color/black" />
-    
-        <TextView
-        android:id="@+id/totalconcession"
+
+    <TextView
+        android:id="@+id/homestatustimestuwise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/homestatustext"
+        android:layout_below="@+id/DateStuwise"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
-        android:text="Your frequency"
+        android:layout_marginTop="10dp"
+        android:text="Total Amount"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@android:color/black" />
-        
-                <TextView
-        android:id="@+id/amount"
+
+    <TextView
+        android:id="@+id/totalfeeStuwise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/totalconcession"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
-        android:text="Your frequency"
+        android:layout_marginTop="10dp"
+        android:text="Total Fee"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@android:color/black" />
-       
+
+    <TextView
+        android:id="@+id/amount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/homestatustimestuwise"
+        android:layout_below="@+id/totalfeeStuwise"
+        android:layout_marginTop="10dp"
+        android:text="Amount Paid"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/black" />
+
+    <TextView
+        android:id="@+id/homestatustextstuwise"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/totalconcession"
+        android:layout_below="@+id/amount"
+        android:layout_marginTop="10dp"
+        android:text="Previous Balance"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/black" />
 
 </RelativeLayout>
